# OpenGL-Test

./: .gitattributes  CMakeLists.txt  OpenGL Test.sln  README.md
OpenGL Test/: Cube.cpp  Cube.h  EventManager.cpp  EventManager.h  Model.cpp  Model.h  OpenGL Test.rc  OpenGL Test.vcxproj  OpenGL Test.vcxproj.filters  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  cube.vert  dodecahedron.frag  dodecahedron.mtl  main.cpp  model.frag  model.vert  resource.h  triangle.frag  triangle.vert
